move timeline logic into module

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
       <div id = 'container'></div>
+      <script type="text/javascript" src="./src/timeline.js"></script>
       <script type="text/javascript" src="./src/index.js"></script>
   </body>
 </html>
