--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   </head>
   <body>
       <div id = 'container'></div>
+
+      <select id="type">
+        <option value="dhw" selected> DHW </option>
+        <option value="Living room"> Living room </option>
+        <option value="Room 3"> Room 3 </option>
+      </select>
+
       <script type="text/javascript" src="./src/timeline.js"></script>
       <script type="text/javascript" src="./src/index.js"></script>
   </body>
