--- a/index.html
+++ b/index.html
@@ -2,6 +2,44 @@
 <html>
   <head>
     <script src="https://d3js.org/d3.v5.js"></script>
+
+    <style>
+      .tooltip-wrapper{
+        background:white;
+        padding: 20px;
+        border: .5px solid grey;
+      }
+
+      .tooltip-wrapper input{
+        width: 25px;
+      }
+
+      .input-wrapper{
+        position: relative;
+      }
+
+      .input-wrapper #start_hour_plus_id{
+          position: absolute;
+          bottom: 19px;
+          right: 6px;
+      }
+
+      .input-wrapper #start_hour_minus_id{
+          position: absolute;
+          top: 16px;
+          left: 6px;
+      }
+
+      .temp_span{
+        padding-left: 35px;
+      }
+
+      button{
+        margin-top: 30px;
+      }
+
+    </style>
+
   </head>
   <body>
       <div id = 'container'></div>
