--- a/index.html
+++ b/index.html
@@ -8,26 +8,80 @@
         background:white;
         padding: 20px;
         border: .5px solid grey;
+        position: relative;
+        user-select: none;
+      }
+
+      span{
+        font-size: 14px;
       }
 
       .tooltip-wrapper input{
         width: 25px;
       }
 
-      .input-wrapper{
-        position: relative;
+      #start_hour_plus_id{
+        position: absolute;
+        top: 7px;
+        left: 72px;
+        width: 11px;
+        cursor: pointer;
       }
 
-      .input-wrapper #start_hour_plus_id{
-          position: absolute;
-          bottom: 19px;
-          right: 6px;
+      #start_hour_minus_id{
+        width: 10px;
+        top: 44px;
+        position: absolute;
+        left: 72px;
+        cursor: pointer;
       }
 
-      .input-wrapper #start_hour_minus_id{
-          position: absolute;
-          top: 16px;
-          left: 6px;
+      #end_hour_plus_id{
+        position: absolute;
+        top: 7px;
+        left: 118px;
+        width: 11px;
+        cursor: pointer;
+      }
+
+      #end_hour_minus_id{
+        width: 13px;
+        top: 44px;
+        position: absolute;
+        left: 118px;
+        cursor: pointer;
+      }
+
+      #start_minute_plus_id{
+        position: absolute;
+        top: 7px;
+        left: 92px;
+        width: 11px;
+        cursor: pointer;
+      }
+
+      #start_minute_minus_id{
+        width: 10px;
+        top: 44px;
+        position: absolute;
+        left: 92px;
+        cursor: pointer;
+      }
+
+      #end_minute_plus_id{
+        position: absolute;
+        top: 7px;
+        left: 138px;
+        width: 11px;
+        cursor: pointer;
+      }
+
+      #end_minute_minus_id{
+        width: 10px;
+        top: 44px;
+        position: absolute;
+        left: 138px;
+        cursor: pointer;
       }
 
       .temp_span{
