add up and down buttons for changing time

--- a/index.html
+++ b/index.html
@@ -12,86 +12,38 @@
         user-select: none;
       }
 
-      span{
-        font-size: 14px;
+      img{
+        width: 12px;
       }
 
-      .tooltip-wrapper input{
-        width: 25px;
-      }
-
-      #start_hour_plus_id{
+      #start_up_id{
         position: absolute;
-        top: 7px;
-        left: 72px;
-        width: 11px;
-        cursor: pointer;
+        top: 15px;
+        left: 108px;
       }
 
-      #start_hour_minus_id{
-        width: 10px;
-        top: 44px;
+      #start_down_id{
         position: absolute;
-        left: 72px;
-        cursor: pointer;
+        bottom: 20px;
+        left: 108px;
       }
 
-      #end_hour_plus_id{
+      #end_up_id{
         position: absolute;
-        top: 7px;
-        left: 118px;
-        width: 11px;
-        cursor: pointer;
+        top: 15px;
+        left: 220px;
       }
 
-      #end_hour_minus_id{
-        width: 13px;
-        top: 44px;
+      #end_down_id{
         position: absolute;
-        left: 118px;
-        cursor: pointer;
+        bottom: 20px;
+        left: 220px;
       }
 
-      #start_minute_plus_id{
-        position: absolute;
-        top: 7px;
-        left: 92px;
-        width: 11px;
-        cursor: pointer;
+      .end-time-label{
+        padding-left: 30px;
       }
-
-      #start_minute_minus_id{
-        width: 10px;
-        top: 44px;
-        position: absolute;
-        left: 92px;
-        cursor: pointer;
-      }
-
-      #end_minute_plus_id{
-        position: absolute;
-        top: 7px;
-        left: 138px;
-        width: 11px;
-        cursor: pointer;
-      }
-
-      #end_minute_minus_id{
-        width: 10px;
-        top: 44px;
-        position: absolute;
-        left: 138px;
-        cursor: pointer;
-      }
-
-      .temp_span{
-        padding-left: 35px;
-      }
-
-      button{
-        margin-top: 30px;
-      }
-
+      
     </style>
 
   </head>
