add cancel and delete btns

--- a/index.html
+++ b/index.html
@@ -20,29 +20,41 @@
       #start_up_id{
         position: absolute;
         top: 15px;
-        left: 108px;
+        left: 109px;
       }
 
       #start_down_id{
         position: absolute;
-        bottom: 20px;
-        left: 108px;
+        top: 37px;
+        left: 109px;
       }
 
       #end_up_id{
         position: absolute;
         top: 15px;
-        left: 220px;
+        left: 221px;
       }
 
       #end_down_id{
         position: absolute;
-        bottom: 20px;
-        left: 220px;
+        top: 37px;
+        left: 221px;
       }
 
       .end-time-label{
         padding-left: 30px;
+      }
+
+      .temp_id{
+        padding-left: 30px;
+      }
+
+      input{
+        width: 20px;
+      }
+
+      .actions-wrapper{
+        padding-top: 20px;
       }
       
     </style>
