add delete button if its editable tooltip

--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
       .actions-wrapper{
         padding-top: 20px;
       }
+
+      #delete_btn_id{
+        border: none;
+        border-radius: 4px;
+        background-color: red;
+        color: white;
+        margin-right: 5px;
+      }
       
     </style>
 
